force-app/main/default/src/objects/PJN_Network_Value_Mapping__mdt/PJN_Network_Value_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Data change request value mapping for those values which needs a transformation to go into Veeva Network</description>
    <label>Network Value Mapping</label>
    <pluralLabel>Network Value Mappings</pluralLabel>
</CustomObject>