force-app/main/default/src/objects/PJN_Network_Value_Mapping__mdt/fields/PJN_External_Value__c.field-meta.xml
<CustomField>
    <fullName>PJN_External_Value__c</fullName>
    <description>Veeva Network external value.</description>
    <inlineHelpText>Veeva Network external value.</inlineHelpText>
    <label>External value</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>