force-app/main/default/src/objects/PJN_Network_Value_Mapping__mdt/fields/PJN_Inbound__c.field-meta.xml
<CustomField>
    <fullName>PJN_Inbound__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does this map from Veeva Network to Salesforce?</description>
    <label>Inbound?</label>
    <type>Checkbox</type>
</CustomField>