force-app/main/default/src/objects/PJN_Network_Value_Mapping__mdt/fields/PJN_Network_Field_Mapping__c.field-meta.xml
<CustomField>
    <fullName>PJN_Network_Field_Mapping__c</fullName>
    <description>Network Field mapping where this value mapping is applied.</description>
    <inlineHelpText>Network Field mapping where this value mapping is applied.</inlineHelpText>
    <label>Network Field Mapping</label>
    <referenceTo>PJN_Network_Field_Mapping__mdt</referenceTo>
    <relationshipLabel>Network Value Mappings</relationshipLabel>
    <relationshipName>PJN_Network_Value_Mappings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>