force-app/main/default/src/objects/PJN_Network_Value_Mapping__mdt/fields/PJN_Outbound__c.field-meta.xml
<CustomField>
    <fullName>PJN_Outbound__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does this map from Salesforce to Veeva Network?</description>
    <label>Outbound?</label>
    <type>Checkbox</type>
</CustomField>