force-app/main/default/src/objects/PJN_Network_Value_Mapping__mdt/fields/PJN_Value__c.field-meta.xml
<CustomField>
    <fullName>PJN_Value__c</fullName>
    <description>Salesforce field value</description>
    <inlineHelpText>Salesforce field value</inlineHelpText>
    <label>Value</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>